update config database

--- a/config/database.yml
+++ b/config/database.yml
@@ -82,8 +82,9 @@ production:
   primary: &primary_production
     <<: *default
     database: mysite_production
-    username: mysite
-    password: <%= ENV["MYSITE_DATABASE_PASSWORD"] %>
+    url: <%= ENV["DATABASE_URL"] %>
+    # username: mysite
+    # password: <%= ENV["MYSITE_DATABASE_PASSWORD"] %>
   cache:
     <<: *primary_production
     database: mysite_production_cache
